Add new feature

--- a/src/componets/navbar.css
+++ b/src/componets/navbar.css
@@ -26,3 +26,11 @@
     color: gray;
   
 }
+#lblCartCount {
+    font-size: 12px;
+    background: #ff0000;
+    color: #fff;
+    padding: 0 5px;
+    vertical-align: top;
+    margin-left: -6px; 
+}
