--- a/src/componets/saladSoupe.css
+++ b/src/componets/saladSoupe.css
@@ -25,9 +25,47 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
    width: 100%;
    gap: 6.5rem;
     
     
 }
+.countHandler{
+    border-radius: 26px;
+    background-color: #1fad14;
+    font-weight: bolder;
+    border: none;
+    text-align: center;
+    width: 6rem;
+}
+.countHandler input {
+    width: 20px;
+    text-align: center;
+    font-weight: bolder;
+    background-color: #1fad14;
+    color: white;
+    border: none;
+  }
+
+  .countHandler button{
+    background-color: #1fad14;
+    font-weight: bolder;
+    border: none;
+    color: white;
+  }
+  .dish_description p {
+    margin-bottom: 0rem;
+  }
+
+  .salad_price p {
+    margin-bottom: 0rem;
+    font-weight: 600;
+  }
+
+  .salad_name h5 {
+    margin-bottom: 0rem;
+  }
+  .dish_Availability p{
+     color: red;
+  }
